Fix body padding on mobile.

--- a/style.css
+++ b/style.css
@@ -2,14 +2,13 @@ html {
   font-family: "Sora", Verdana, sans-serif;
   font-size: 16px;
   box-sizing: border-box;
-  margin: 0;
 }
 
 body {
   display: flex;
   flex-direction: column;
   background-color: #FAFAF9;
-  margin: 0 6rem;
+  margin: 0;
   margin-top: 10.125rem;
 }
 
@@ -94,6 +93,10 @@ p.testimonial-text {
 
 /* Tablets and desktop */
 @media screen and (min-width: 1024px) {
+  body {
+    margin: 0 6rem;
+  }
+
   .testimonial {
     margin-bottom: 0;
   }
